service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-service-portal
spec:
  selector:
    app: self-service-portal
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
