ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-service-portal
spec:
  rules:
    - host: ssp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-service-portal
                port:
                  number: 80
